Added security layers

--- a/microservices/battle/nginx/Dockerfile
+++ b/microservices/battle/nginx/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
         bc \
         curl \
+        openssl \
         unzip \
     && rm -rf /var/lib/apt/lists/*
 
@@ -29,6 +30,16 @@ COPY scripts/ /usr/local/bin
 
 RUN chmod +x /usr/local/bin/reload.sh
 RUN chmod +x /usr/local/bin/sensor.sh
+
+RUN echo 01 > ca.srl \
+    && openssl genrsa -out ca-key.pem 2048 \
+    && openssl req -new -x509 -days 365 -subj "/CN=*" -key ca-key.pem -out ca.pem \
+    && openssl genrsa -out server-key.pem 2048 \
+    && openssl req -subj "/CN=*" -new -key server-key.pem -out server.csr \
+    && openssl x509 -req -days 365 -in server.csr -CA ca.pem -CAkey ca-key.pem -out server-cert.pem \
+    && openssl rsa -in server-key.pem -out server-key.pem \
+    && cp *.pem /etc/nginx/ \
+    && cp *.csr /etc/nginx/
 
 CMD [ "/usr/local/bin/containerpilot", \
     "nginx", \
